fix sticky navbar, fix consultation form, translate cookies, fix refresh in dashboard

--- a/admin-clinic/assets/css/styles.css
+++ b/admin-clinic/assets/css/styles.css
@@ -135,10 +135,10 @@ table.table.table-bordered {
   position: fixed;
   right: 20px;
   bottom: 20px;
-  width: auto; /* يمنع الزر من الامتداد إلى العرض الكامل */
+  width: auto; 
   padding: 10px 20px;
   border-radius: 5px;
-  z-index: 1000; /* للتأكد من أنه فوق بقية العناصر */
+  z-index: 1000; 
   width: 100px !important;
   border-radius: 300px !important;
 }
@@ -149,4 +149,36 @@ table.table.table-bordered {
   text-decoration: none !important;
   background-color: transparent !important;
   cursor: pointer !important;
+}
+
+table.table-bordered th,
+table.table-bordered td {
+  border: .5PX solid #b6b6b6;
+}
+
+/* شكل الروابط بشكل عام */
+.sidebar-link {
+  display: block;
+  padding: 10px 15px;
+  color: #333;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+  border-radius: 0px;
+  margin-bottom: 5px;
+  font-weight: 500;
+}
+
+/* عند تمرير الماوس */
+.sidebar-link:hover {
+  background-color: #f0f0f0;
+  color: #007bff;
+}
+
+/* التبويب النشط */
+.sidebar-link.active {
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+  box-shadow: 0 2px 8px rgba(0, 123, 255, 0.3);
+  border-radius: 0px !important;
 }
