--- a/public-clinic/assets/css/style.css
+++ b/public-clinic/assets/css/style.css
@@ -481,7 +481,7 @@ img.card-img-top {
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
-  z-index: 1000;
+  z-index: 30000;
   width: 266px;
 }
 
@@ -492,4 +492,9 @@ img.card-img-top {
   padding: 5px 10px;
   cursor: pointer;
   width: 100%;
+}
+
+.headerShared {
+  overflow: visible;
+  position: static; /* أو احذفي position بالكامل إن أمكن */
 }
