Updated background color in style.css

--- a/public-clinic/assets/css/style.css
+++ b/public-clinic/assets/css/style.css
@@ -3,7 +3,7 @@
 body {
   /* font-family: Arial, sans-serif; */
   font-family: var(--primary-font-family) !important;
-  background-color: #f8f9fa;
+  background-color: #68a6e3;
   color: #212529;
 }
 
